deployment/scaleway-dev/kubernetes/packer/filesystem/bootstrap/kubernetes/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: vault-issuer
spec:
  tls:
  - hosts: []
    secretName: kubernetes-dashboard-ingress-tls
  rules:
  - host: kubernetes-dashboard.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
